[gd_scene load_steps=53 format=3 uid="uid://0vjm83ykh116"]

[ext_resource type="Script" path="res://Scenes/Entities/Enemy/Enemy.gd" id="1_1aifw"]
[ext_resource type="Texture2D" uid="uid://d2llir2joccef" path="res://Scenes/Entities/Enemy/Mage/Attack/attack1.png" id="2_fleib"]
[ext_resource type="Texture2D" uid="uid://c48q8ismoxv0s" path="res://Scenes/Entities/Enemy/Mage/Attack/attack2.png" id="3_j6m4b"]
[ext_resource type="Texture2D" uid="uid://mkr8n7yjxxlp" path="res://Scenes/Entities/Enemy/Mage/Attack/attack3.png" id="4_gxkr2"]
[ext_resource type="Texture2D" uid="uid://cs773ikondvnx" path="res://Scenes/Entities/Enemy/Mage/Attack/attack4.png" id="5_ywd8x"]
[ext_resource type="Texture2D" uid="uid://ddqpcauwo38gg" path="res://Scenes/Entities/Enemy/Mage/Attack/attack5.png" id="6_fxqg1"]
[ext_resource type="Texture2D" uid="uid://7ofqecssxj3g" path="res://Scenes/Entities/Enemy/Mage/Attack/attack6.png" id="7_a45vb"]
[ext_resource type="Texture2D" uid="uid://dhoqiqjqgjfm7" path="res://Scenes/Entities/Enemy/Mage/Attack/attack7.png" id="8_o3nc4"]
[ext_resource type="Texture2D" uid="uid://dfrbibplbhfte" path="res://Scenes/Entities/Enemy/Mage/Death/death1.png" id="9_suyho"]
[ext_resource type="Texture2D" uid="uid://b5c3nmtjxjdnr" path="res://Scenes/Entities/Enemy/Mage/Death/death2.png" id="10_3ip00"]
[ext_resource type="Texture2D" uid="uid://216mmvnpw660" path="res://Scenes/Entities/Enemy/Mage/Death/death3.png" id="11_etvu5"]
[ext_resource type="Texture2D" uid="uid://maxi5fimcffr" path="res://Scenes/Entities/Enemy/Mage/Death/death4.png" id="12_ku3b5"]
[ext_resource type="Texture2D" uid="uid://cwj0ewtp830io" path="res://Scenes/Entities/Enemy/Mage/Death/death5.png" id="13_a8d2v"]
[ext_resource type="Texture2D" uid="uid://ba2x32ymva070" path="res://Scenes/Entities/Enemy/Mage/Death/death6.png" id="14_ljeoy"]
[ext_resource type="Texture2D" uid="uid://dchndq7qsgb7x" path="res://Scenes/Entities/Enemy/Mage/Death/death7.png" id="15_q6c0i"]
[ext_resource type="Texture2D" uid="uid://vh4ruevmgiq" path="res://Scenes/Entities/Enemy/Mage/Death/death8.png" id="16_eq5ut"]
[ext_resource type="Texture2D" uid="uid://dhu2hqlk00011" path="res://Scenes/Entities/Enemy/Mage/Death/death9.png" id="17_016ks"]
[ext_resource type="Texture2D" uid="uid://bjohdxm4mjtgw" path="res://Scenes/Entities/Enemy/Mage/Death/death10.png" id="18_eiqk2"]
[ext_resource type="Texture2D" uid="uid://b4ep8chhiv2kq" path="res://Scenes/Entities/Enemy/Mage/Hurt/hurt1.png" id="19_m50bv"]
[ext_resource type="Texture2D" uid="uid://bdbfdjnl53tb6" path="res://Scenes/Entities/Enemy/Mage/Hurt/hurt2.png" id="20_2w0mo"]
[ext_resource type="Texture2D" uid="uid://llwcvejtkevs" path="res://Scenes/Entities/Enemy/Mage/Hurt/hurt3.png" id="21_2q42p"]
[ext_resource type="Texture2D" uid="uid://cggr0kyvyyikt" path="res://Scenes/Entities/Enemy/Mage/Hurt/hurt4.png" id="22_oku6l"]
[ext_resource type="Texture2D" uid="uid://bbfob282fpvbx" path="res://Scenes/Entities/Enemy/Mage/Idle/idle1.png" id="23_0djj2"]
[ext_resource type="Texture2D" uid="uid://ckh3y846xsd30" path="res://Scenes/Entities/Enemy/Mage/Idle/idle2.png" id="24_2d6fk"]
[ext_resource type="Texture2D" uid="uid://dvt5kk7jdml3t" path="res://Scenes/Entities/Enemy/Mage/Idle/idle3.png" id="25_6ylak"]
[ext_resource type="Texture2D" uid="uid://doi52mxv7cjsd" path="res://Scenes/Entities/Enemy/Mage/Idle/idle4.png" id="26_jo0y8"]
[ext_resource type="Texture2D" uid="uid://cd5qw8wotubgy" path="res://Scenes/Entities/Enemy/Mage/Idle/idle5.png" id="27_4u10f"]
[ext_resource type="Texture2D" uid="uid://dwjy08f2a81qi" path="res://Scenes/Entities/Enemy/Mage/Idle/idle6.png" id="28_vbjov"]
[ext_resource type="Texture2D" uid="uid://bp1jtnog3dpuy" path="res://Scenes/Entities/Enemy/Mage/Idle/idle7.png" id="29_jq0hc"]
[ext_resource type="Texture2D" uid="uid://dothblln06b5s" path="res://Scenes/Entities/Enemy/Mage/Idle/idle8.png" id="30_072tu"]
[ext_resource type="Texture2D" uid="uid://cggd6ud2vtqar" path="res://Scenes/Entities/Enemy/Mage/Idle/idle9.png" id="31_px3m4"]
[ext_resource type="Texture2D" uid="uid://bb6ai0a02yu1p" path="res://Scenes/Entities/Enemy/Mage/Idle/idle10.png" id="32_5gxjx"]
[ext_resource type="Texture2D" uid="uid://cwptmiqu2fdp6" path="res://Scenes/Entities/Enemy/Mage/Idle/idle11.png" id="33_qqe6f"]
[ext_resource type="Texture2D" uid="uid://dvn46ajtv2xhs" path="res://Scenes/Entities/Enemy/Mage/Idle/idle12.png" id="34_p5ash"]
[ext_resource type="Texture2D" uid="uid://ddkifmklgqr7q" path="res://Scenes/Entities/Enemy/Mage/Idle/idle13.png" id="35_ufdx2"]
[ext_resource type="Texture2D" uid="uid://1kcx83wrhqvb" path="res://Scenes/Entities/Enemy/Mage/Idle/idle14.png" id="36_celd6"]
[ext_resource type="Texture2D" uid="uid://dlyfgtas2s0qu" path="res://Scenes/Entities/Enemy/Mage/Run/run1.png" id="37_70cs5"]
[ext_resource type="Texture2D" uid="uid://bd0adn1w1p62x" path="res://Scenes/Entities/Enemy/Mage/Run/run2.png" id="38_ncqay"]
[ext_resource type="Texture2D" uid="uid://cfr4atnnh6dsh" path="res://Scenes/Entities/Enemy/Mage/Run/run3.png" id="39_dtagd"]
[ext_resource type="Texture2D" uid="uid://d3paivqw66mcb" path="res://Scenes/Entities/Enemy/Mage/Run/run4.png" id="40_71v14"]
[ext_resource type="Texture2D" uid="uid://t3mi6oxqyvdy" path="res://Scenes/Entities/Enemy/Mage/Run/run5.png" id="41_01iid"]
[ext_resource type="Texture2D" uid="uid://cexr4yndbvuoy" path="res://Scenes/Entities/Enemy/Mage/Run/run6.png" id="42_36thm"]
[ext_resource type="Texture2D" uid="uid://djufm3v1pjqc0" path="res://Scenes/Entities/Enemy/Mage/Run/run7.png" id="43_oc5ou"]
[ext_resource type="Texture2D" uid="uid://busueg4w8hyoe" path="res://Scenes/Entities/Enemy/Mage/Run/run8.png" id="44_3gb60"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t57ea"]
size = Vector2(48.25, 61.75)

[sub_resource type="SpriteFrames" id="SpriteFrames_vl2kv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fleib")
}, {
"duration": 1.0,
"texture": ExtResource("3_j6m4b")
}, {
"duration": 1.0,
"texture": ExtResource("4_gxkr2")
}, {
"duration": 1.0,
"texture": ExtResource("5_ywd8x")
}, {
"duration": 1.0,
"texture": ExtResource("6_fxqg1")
}, {
"duration": 1.0,
"texture": ExtResource("7_a45vb")
}, {
"duration": 1.0,
"texture": ExtResource("8_o3nc4")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_suyho")
}, {
"duration": 1.0,
"texture": ExtResource("10_3ip00")
}, {
"duration": 1.0,
"texture": ExtResource("11_etvu5")
}, {
"duration": 1.0,
"texture": ExtResource("12_ku3b5")
}, {
"duration": 1.0,
"texture": ExtResource("13_a8d2v")
}, {
"duration": 1.0,
"texture": ExtResource("14_ljeoy")
}, {
"duration": 1.0,
"texture": ExtResource("15_q6c0i")
}, {
"duration": 1.0,
"texture": ExtResource("16_eq5ut")
}, {
"duration": 1.0,
"texture": ExtResource("17_016ks")
}, {
"duration": 1.0,
"texture": ExtResource("18_eiqk2")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_m50bv")
}, {
"duration": 1.0,
"texture": ExtResource("20_2w0mo")
}, {
"duration": 1.0,
"texture": ExtResource("21_2q42p")
}, {
"duration": 1.0,
"texture": ExtResource("22_oku6l")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_0djj2")
}, {
"duration": 1.0,
"texture": ExtResource("24_2d6fk")
}, {
"duration": 1.0,
"texture": ExtResource("25_6ylak")
}, {
"duration": 1.0,
"texture": ExtResource("26_jo0y8")
}, {
"duration": 1.0,
"texture": ExtResource("27_4u10f")
}, {
"duration": 1.0,
"texture": ExtResource("28_vbjov")
}, {
"duration": 1.0,
"texture": ExtResource("29_jq0hc")
}, {
"duration": 1.0,
"texture": ExtResource("30_072tu")
}, {
"duration": 1.0,
"texture": ExtResource("31_px3m4")
}, {
"duration": 1.0,
"texture": ExtResource("32_5gxjx")
}, {
"duration": 1.0,
"texture": ExtResource("33_qqe6f")
}, {
"duration": 1.0,
"texture": ExtResource("34_p5ash")
}, {
"duration": 1.0,
"texture": ExtResource("35_ufdx2")
}, {
"duration": 1.0,
"texture": ExtResource("36_celd6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_70cs5")
}, {
"duration": 1.0,
"texture": ExtResource("38_ncqay")
}, {
"duration": 1.0,
"texture": ExtResource("39_dtagd")
}, {
"duration": 1.0,
"texture": ExtResource("40_71v14")
}, {
"duration": 1.0,
"texture": ExtResource("41_01iid")
}, {
"duration": 1.0,
"texture": ExtResource("42_36thm")
}, {
"duration": 1.0,
"texture": ExtResource("43_oc5ou")
}, {
"duration": 1.0,
"texture": ExtResource("44_3gb60")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_2v8su"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"attack", &"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(65, -40), Vector2(65, -40)]
}

[sub_resource type="Animation" id="Animation_cy058"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [&"death", &"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(25, 5), Vector2(25, 5)]
}

[sub_resource type="Animation" id="Animation_8ew7s"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"hurt", &"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(65, -40), Vector2(65, -40)]
}

[sub_resource type="Animation" id="Animation_ysqkg"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [&"idle", &"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(65, -40), Vector2(65, -40)]
}

[sub_resource type="Animation" id="Animation_7c0in"]
resource_name = "run"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"idle", &"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 13]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(65, -40), Vector2(65, -40)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sfl5j"]
_data = {
"attack": SubResource("Animation_2v8su"),
"death": SubResource("Animation_cy058"),
"hurt": SubResource("Animation_8ew7s"),
"idle": SubResource("Animation_ysqkg"),
"run": SubResource("Animation_7c0in")
}

[node name="MageEnemy" type="Node2D"]
script = ExtResource("1_1aifw")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, 56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -3)
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_t57ea")

[node name="HealthBarContainer" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = -50.0
offset_top = -115.0
offset_right = 150.0
offset_bottom = -95.0
color = Color(0, 1, 0, 1)

[node name="HealthBar" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = -50.0
offset_top = -115.0
offset_right = 50.0
offset_bottom = -95.0
color = Color(1, 0, 0, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(48, 5)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_vl2kv")
animation = &"hurt"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sfl5j")
}

[node name="PacifistIndicator" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = -62.0
offset_top = -24.0
offset_right = 58.0
offset_bottom = 131.0
color = Color(0, 0, 0, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
